# zephyr

./: CODEOWNERS  MAINTAINERS.yml  hwm.g4  hwm.hexagon  hwm.home  west.yml
boards/arm/fvp_base_revc_2xaemv8a/: board.yml
boards/arm/mps4/: Kconfig.defconfig  mps4_common_ns.dtsi  mps4_corstone315_fvp_ns.dts  mps4_corstone320_fvp_ns.dts  mps4_corstone320_fvp_ns_defconfig
boards/common/: hardware-robot.board.cmake
boards/riscv/ai_wb2_12f/: ai_wb2_12f.dts  ai_wb2_12f_defconfig  board.cmake
boards/riscv/ai_wb2_12f/support/: openocd.cfg
boards/riscv/bl604e_iot_dvk/: Kconfig.board  Kconfig.defconfig  bl604e_iot_dvk.dts  bl604e_iot_dvk.yaml  bl604e_iot_dvk_defconfig
boards/riscv/dt_bl10_devkit/: dt_bl10_devkit.dts  dt_bl10_devkit_defconfig
boards/riscv/xt_bl_zb1/: Kconfig.board  Kconfig.defconfig  xt_bl_zb1-pinctrl.dtsi  xt_bl_zb1.dts  xt_bl_zb1.yaml  xt_bl_zb1_defconfig
boards/riscv/xt_bl_zb1/doc/: index.rst
boards/st/nucleo_h753zi/: board.cmake  nucleo_h753zi.yaml
boards/st/nucleo_u5a5zj_q/: board.cmake  nucleo_u5a5zj_q.yaml
doc/hardware/peripherals/: gnss.rst
doc/reference/: overview.rst
doc/releases/: migration-guide-4.3.rst
drivers/flash/: flash_stm32_ospi.c
drivers/modem/: modem_iface_uart_async.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_bflb.c
drivers/serial/: CMakeLists.txt  Kconfig  uart_bflb.c  uart_bflb2.c
drivers/usb/udc/: udc_stm32.c
dts/bindings/: vendor-prefixes.txt
dts/riscv/bouffalolab/: bl7.dtsi
include/zephyr/drivers/pinctrl/: pinctrl_soc_bflb_common.h
include/zephyr/drivers/usb/: udc.h
lib/os/: reboot.c
modules/hal_bouffalolab/: CMakeLists.txt  bl602.cmake  easyflash4.cmake  newlib.cmake
modules/hal_bouffalolab/include/: bflb_glb.h  bflb_gpio.h  bflb_hbn.h  bflb_pinctrl.h  bflb_uart.h
modules/hal_bouffalolab/include/bl602/: bl602_ram.ld  bl_soc.h  bl_soc_glb.h  bl_soc_gpio.h  bl_soc_hbn.h  bl_soc_pinctrl.h  linker.ld
modules/hal_bouffalolab/include/bl702/: bl_soc.h  bl_soc_glb.h  bl_soc_gpio.h  bl_soc_hbn.h  bl_soc_pinctrl.h
modules/trusted-firmware-m/: CMakeLists.txt  Kconfig.tfm
samples/tfm_integration/psa_crypto/: prj.conf
samples/tfm_integration/psa_crypto/src/configs/: config_mbedtls.h
scripts/: requirements-actions.txt
scripts/pylib/robotframework-twister-harness/: MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
scripts/pylib/robotframework-twister-harness/examples/: conftest.py  test_suite.robot
scripts/pylib/robotframework-twister-harness/pytest_robotframework_twister/: __init__.py  collector.py  fixture.py  plugin.py
scripts/pylib/robotframework-twister-harness/pytest_robotframework_twister_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/pylib/robotframework-twister-harness/resources/: device_communication.robot
scripts/pylib/robotframework-twister-harness/robot_tests/: shell_commands.robot
scripts/pylib/robotframework-twister-harness/src/pytest_robotframework_twister/: __init__.py  collector.py  exceptions.py  fixture.py  plugin.py
scripts/pylib/robotframework-twister-harness/src/pytest_robotframework_twister/helpers/: __init__.py  robot_utils.py
scripts/pylib/robotframework-twister-harness/src/pytest_robotframework_twister_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/pylib/robotframework-twister-harness/src/robotframework_twister_harness/: __init__.py  conftest.py
scripts/pylib/robotframework-twister-harness/src/robotframework_twister_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/pylib/robotframework-twister-harness/src/robotframework_twister_harness/abstract/: RobotTwisterHarness.py  __init__.py
scripts/pylib/robotframework-twister-harness/src/robotframework_twister_harness/handlers/: RobotHandler.p  __init__.py
scripts/pylib/robotframework-twister-harness/src/robotframework_twister_harness/libraries/: DeviceProxy.py  ProxyTwisterLibrary.py  SocketBridge.py  __init__.py
scripts/pylib/robotframework-twister-harness/tests/: conftest.py  test_robot_integration.py
scripts/pylib/twister/twisterlib/: handlers.py  harness.py  testinstance.py  testplan.py
scripts/schemas/twister/: testsuite-schema.yaml
scripts/west_commands/runners/: __init__.py  hardware-robot.py
soc/riscv/bouffalolab/bflb/: CMakeLists.txt  Kconfig.defconfig.bl6  Kconfig.defconfig.bl7  Kconfig.series  Kconfig.soc.bl6  Kconfig.soc.bl7  soc.c  soc.h
soc/riscv/bouffalolab/common/: CMakeLists.txt
soc/silabs/silabs_siwx91x/: Kconfig.defconfig
subsys/bluetooth/audio/: bap_broadcast_assistant.c
tests/application_development/cpp/cpp_compile/: testcase.yaml
tests/application_development/cpp/static_vars/: CMakeLists.txt  testcase.yaml
tests/robot/: hardware_keywords.robot
tests/robot/hello_world/: __init__.robot  hello_world.robot  hello_world_serial.robot  prj.conf  testcase.yaml
tests/robot/hello_world/src/: main.c
tests/robot/robot_with_pytest/: CMakeLists.txt  README.rst  prj.conf  requirements.txt  robot_handler.py  sample.yaml
tests/robot/robot_with_pytest/robot_tests/: SerialKeywords.py  __init__.py  basic_serial_test.robot  conftest.py  serial_communication_test.robot  simple_serial_test.robot  simple_test.robot  test_robot_framework.py  variables.py
tests/robot/robot_with_pytest/src/: main.c
