[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-robotframework-twister-harness"
version = "0.1.0"
description = "Robot Framework harness for pytest-twister-harness"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "robotframework>=5.0.0", 
    "robotframework-seriallibrary>=0.4.0",
    "pyserial>=3.5",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.entry-points.pytest11]
robotframework-twister = "pytest_robotframework_twister.plugin"
