# robotframework-twister-harness/pyproject.toml
[build-system]
requires = [
    "setuptools >= 48.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-twister-harness"
version = "1.0.0"
description = "Robot Framework integration for Zephyr Twister with shared device access"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8"
authors = [
    {name = "Zephyr Project", email = "devel@lists.zephyrproject.org"},
]
keywords = [
    "zephyr",
    "twister", 
    "robot-framework",
    "testing",
    "embedded",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Embedded Systems",
    "Framework :: Robot Framework",
    "Framework :: Pytest",
]
dependencies = [
    "robotframework >= 6.0",
    "pytest-twister-harness",
    "pyserial >= 3.5",
    "psutil >= 5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-cov",
    "twine",
    "wheel",
    "black",
    "flake8",
]
test = [
    "pytest >= 7.0.0", 
    "pytest-timeout",
]

[project.entry-points.pytest11]
robotframework_twister_harness = "robotframework_twister_harness.conftest"

[project.urls]
Documentation = "https://docs.zephyrproject.org/latest/develop/test/twister.html"
Source = "https://github.com/zephyrproject-rtos/robotframework-twister-harness"
Tracker = "https://github.com/zephyrproject-rtos/robotframework-twister-harness/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.robot"]
"robotframework_twister_harness" = [
    "../resources/*.robot",
    "../robot_tests/*.robot",
]
